# nlp-assignment

./: .gitignore  Dockerfile  LICENSE  README.md  chatbot.py  config.py  data_loader.py  evaluator.py  llm_generator.py  main.py  pyproject.toml  rag_system.py  requirements.txt
data/: menu.json  menu.txt
input/: answers.txt  queries.json  queries.txt
output/: answers.txt  evaluation_metrics.json  formatted_output.txt  query_response_pairs.txt  results.json
